@@ -1,7 +1,7 @@
 # Prova Finale di Ingegneria del Software - AA 2019-2020
-![alt text](src\main\resources\images\santorini.png)
+![alt text](src/main/resources/images/santorini.png)
 
-Implementazione del gioco da tavola [Santorini](http://www.craniocreations.it/prodotto/santorini/).
+Implementazione del gioco da tavolo [Santorini](http://www.craniocreations.it/prodotto/santorini/).
 
 Il progetto consiste nell’implementazione di un sistema distribuito composto da un singolo server in grado di gestire una partita alla volta e multipli client (uno per giocatore) che possono partecipare ad una sola partita alla volta utilizzando il pattern MVC (Model-View-Controller).
 Interazione e gameplay: linea di comando (CLI) e grafica (GUI).
@@ -23,9 +23,6 @@ La seguente documentazione include una descrizione per la maggior parte delle cl
 |__JavaFx__|Libreria grafica|
 |__Maven__|Strumento di automazione della compilazione utilizzato principalmente per progetti Java.|
 |__JUnit__|Framework di unit test|
-|__Gson__|Libreria Java open-source per serializzare e deserializzare oggetti Java su JSON|
-
-
 
 ## Funzionalità
 ### Funzionalità Sviluppate
@@ -33,13 +30,11 @@ La seguente documentazione include una descrizione per la maggior parte delle cl
 - CLI
 - GUI
 - Socket
-- 2 FA (Funzionalità Avanzate)
-
-### Funzionalità Aggiuntive Sviluppate
-- __Persistenza:__ Lo stato di una partita deve essere salvato su disco, in modo che la partita possa
-riprendere anche a seguito dell’interruzione dell’esecuzione del server.
-- __Undo:__ permette a un giocatore di annullare la propria
-mossa entro un periodo di 5 secondi da quando l’ha effettuata
+- 2 FA (Funzionalità Avanzate):
+    - __Persistenza:__ lo stato di una partita deve essere salvato su disco, in modo che la partita possa
+        riprendere anche a seguito dell’interruzione dell’esecuzione del server.
+    - __Undo:__ permette a un giocatore di annullare la propria
+        mossa entro un periodo di 5 secondi da quando l’ha effettuata
 
 ### Jars
 I Jar del progetto possono essere scaricati dal seguente link: [Jars](N/A).
@@ -55,20 +50,20 @@ Per lanciare Santorini Client CLI digitare il comando:
 java -jar santorini-client.jar --cli
 ```
 #### GUI
-Per poter lanciare la modalità GUI è necessario scaricare l'SDK relativo al proprio sistema operativo da https://gluonhq.com/products/javafx/ e posizionare la relativa cartella estratta nella stessa posizione del client.jar.
-
-Per lanciare Santorini Client GUI digitare il comando:
+Per poter lanciare la modalità GUI sono disponibili 2 modalità:
+- effettuare doppio click sull'eseguibile ```santorini-client.jar```
+- digitare da terminale il comando:
 ```
-java --module-path javafx-sdk-11.0.2/lib --add-modules javafx.controls --add-modules javafx.fxml -jar santorini-client.jar
+java santorini-client.jar
 ```
 
 ### Santorini Server
 Per lanciare Santorini Server digitare il comando:
 ```
-java -jar santorini-server.jar [--port port]
+java -jar santorini-server.jar [--port <port_number>]
 ```
 #### Parameters
-- `-- port`: permette di specificare la porta del server. Se non specificato il valore di default è __16847__;
+- `--port` `-p` : permette di specificare la porta del server. Se non specificato il valore di default è __16847__;
 
 ## Componenti del gruppo
 - [__Samuele Negrini__](https://github.com/snegrini)
